[gd_scene load_steps=4 format=3 uid="uid://c1no3sh5sxyt3"]

[ext_resource type="Texture2D" uid="uid://c2d7emduicf3y" path="res://assets/graphics/ui/icons/attack.png" id="1_ktq28"]
[ext_resource type="Script" path="res://src/core/ui/game/skill_description_panel.gd" id="1_xavmu"]
[ext_resource type="Texture2D" uid="uid://cuvt1v66hlaec" path="res://assets/graphics/ui/icons/cancel.png" id="3_n3boe"]

[node name="SkillDescriptionPanel" type="PanelContainer"]
custom_minimum_size = Vector2(100, 0)
offset_right = 100.0
offset_bottom = 91.0
script = ExtResource("1_xavmu")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 3.0
offset_top = 3.0
offset_right = 97.0
offset_bottom = 88.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
offset_right = 94.0
offset_bottom = 23.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
offset_right = 19.0
offset_bottom = 19.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/margin_left = -3
theme_override_constants/margin_top = -3

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer/MarginContainer"]
z_index = 1
offset_left = -3.0
offset_top = -3.0
offset_right = 19.0
offset_bottom = 19.0

[node name="Icon" type="TextureRect" parent="VBoxContainer/HBoxContainer/MarginContainer/PanelContainer"]
unique_name_in_owner = true
offset_left = 3.0
offset_top = 3.0
offset_right = 19.0
offset_bottom = 19.0
texture = ExtResource("1_ktq28")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
offset_left = 20.0
offset_top = 1.0
offset_right = 70.0
offset_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
offset_right = 50.0
offset_bottom = 10.0
theme_override_constants/margin_top = 1

[node name="Name" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
offset_top = 1.0
offset_right = 50.0
offset_bottom = 10.0
text = "Skill Name"

[node name="CooldownContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
offset_top = 11.0
offset_right = 50.0
offset_bottom = 20.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/CooldownContainer"]
offset_right = 34.0
offset_bottom = 9.0
text = "Cooldown:"

[node name="Cooldown" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/CooldownContainer"]
unique_name_in_owner = true
offset_left = 35.0
offset_right = 50.0
offset_bottom = 9.0
size_flags_horizontal = 3
text = "1"

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
offset_left = 71.0
offset_right = 94.0
offset_bottom = 23.0
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/margin_top = -3
theme_override_constants/margin_right = -3

[node name="Cancel" type="Button" parent="VBoxContainer/HBoxContainer/MarginContainer2"]
offset_top = -3.0
offset_right = 26.0
offset_bottom = 23.0
icon = ExtResource("3_n3boe")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
offset_top = 24.0
offset_right = 94.0
offset_bottom = 85.0
theme_override_constants/margin_left = 1
theme_override_constants/margin_bottom = -2

[node name="Description" type="Label" parent="VBoxContainer/MarginContainer"]
unique_name_in_owner = true
offset_left = 1.0
offset_right = 94.0
offset_bottom = 63.0
text = "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s."
autowrap_mode = 3

[connection signal="pressed" from="VBoxContainer/HBoxContainer/MarginContainer2/Cancel" to="." method="_on_cancel_pressed"]
